center alignment of bookmarks corrected

--- a/src/components/Bookmark.css
+++ b/src/components/Bookmark.css
@@ -5,7 +5,8 @@ h1{
     min-height: 250px;
     background: #D05252;
     border-radius: 30px;
-    margin: 40px 0 40px 15px;
+    /* margin: 40px 0 40px 15px; */
+    margin: 15px 0px;
     padding: 10px;
     display: flex;
     flex-direction: column;
